<resources>
    <string name="app_name">Siggmo</string>

    <!-- login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- 各画面のタイトル -->
    <string name="detail_title">詳細</string>
    <string name="edit_title">編集</string>
    <string name="new_addition_title">新しい曲を追加</string>
    <string name="lists_title">リスト一覧</string>
    <string name="list_title">曲の一覧</string>
    <string name="song_add_title">リストに曲を追加する</string>

    <!-- 項目 -->
    <string name="action_settings">Settings</string>
    <string name="music_name">曲名</string>
    <string name="music_phonetic">よみがな(曲名)</string>
    <string name="singer_name">歌手名</string>
    <string name="singer_phonetic">よみがな(歌手名)</string>
    <string name="first_line">歌いだし</string>
    <string name="proper_key">適正キー</string>
    <string name="movie_link">動画のリンク</string>
    <string name="score">前回のスコア</string>
    <string name="free_memo">メモ</string>
    <string name="edit">編集</string>
    <string name="dbup">保存</string>
    <string name="no_data">情報なし</string>
    <string name="update">更新</string>
    <string name="singing_level">歌えるレベル</string>
    <string name="last_update">最終更新日</string>

    <string name="save">保存</string>

    <!-- ナビゲーションドロワーの項目 -->
    <string name="search">検索</string>
    <string name="sort">ソート</string>
    <string name="lists">リスト一覧</string>
    <string name="add_music">曲の追加</string>
    <string name="search_clear">検索結果のクリア</string>
</resources>
