<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/m_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music_name"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/m_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/music_name"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/m_phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music_phonetic" />

            <EditText
                android:id="@+id/m_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/music_phonetic"
                tools:ignore="LabelFor,TextFields" />

            <TextView
                android:id="@+id/s_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/singer_name" />

            <EditText
                android:id="@+id/s_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/singer_name" />

            <TextView
                android:id="@+id/s_phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/singer_phonetic" />

            <EditText
                android:id="@+id/s_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/singer_name"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/f_line_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_line" />

            <EditText
                android:id="@+id/f_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/first_line" />

            <TextView
                android:id="@+id/p_key_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/proper_key" />

            <EditText
                android:id="@+id/p_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/proper_key" />

            <TextView
                android:id="@+id/m_link_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_link" />

            <EditText
                android:id="@+id/m_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/movie_link" />

            <TextView
                android:id="@+id/s_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score" />

            <EditText
                android:id="@+id/s_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/score" />

            <TextView
                android:id="@+id/f_memo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_memo" />

            <EditText
                android:id="@+id/f_memo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textMultiLine|textPersonName"
                android:text="@string/free_memo" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dbup" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>